2023-08-24  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el:
	* ebuild-mode-keywords.el:
	* gentoo-newsitem-mode.el:
	* glep-mode.el:
	* devbook-mode.el: Enable lexical binding.
	* ebuild-mode.el (ebuild-run-command, ebuild-mode-run-pkgdev)
	(ebuild-mode-run-pkgcheck): Add underscore to name of unused
	function argument.

	* ebuild-mode.el (ebuild-mode-process-environment): No longer set
	NOCOLOR, because NO_COLOR is supported by stable Portage.

	* ebuild-mode.el (ebuild-mode): Refer to sh-mode directly,
	instead of shell-script-mode which is its alias.
	(sh-must-be-shell-mode): Test for its existence, rather than
	testing emacs-major-version. Simply redefine the function,
	in order to avoid obsolete defadvice and non-portable advice-add.
	This fixes a byte-compile warning in Emacs 30 while keeping
	compatibility with XEmacs.

	* glep-mode.el (rst-classify-adornment, glep-ignore-preamble):
	Port from defadvice to advice-add.

	* glep-mode.el (glep-mode-format-html): Move docstring to the top.

2023-08-20  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-delete-trailing-whitespace):
	New function. This avoids redefining delete-trailing-whitespace.
	(ebuild-repo-mode-before-save): Update caller.

2023-08-01  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

2023-07-06  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.65 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

2023-07-05  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-repo-mode): local-variable-p has two
	required arguments in XEmacs, bug 903273.

2023-06-17  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.64 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

	* Makefile (ELCS, INFOFILES, EMACS, EMACSFLAGS): New variables.
	(.PHONY): Add keywords target.
	(all): Build ELCS and INFOFILES by default.
	(%.elc, %.info): New rules.
	(clean): Add *.elc.
