@@ -1,3 +1,9 @@
+2023-08-26  Ulrich Müller  <ulm@gentoo.org>
+
+	* ebuild-mode.el (ebuild-mode): Set paragraph-separate for
+	eclasses, in order to prevent rewrapping of paragraphs into a
+	preceding eclass documentation token.
+
 2023-08-24  Ulrich Müller  <ulm@gentoo.org>
 
 	* ebuild-mode.el:
